fix: align user icon on map page

--- a/online-zoo/pages/zoos-map/zoos-map.css
+++ b/online-zoo/pages/zoos-map/zoos-map.css
@@ -73,7 +73,7 @@ header {
 }
 .nav-wrapper img {
   width: 52px;
-  margin-right: 92px;
+  margin-right: 83px;
 }
 .nav-wrapper nav {
   margin-left: 89px;
